hard-gists/9316552/run.log
=== Docker Run Log for 9316552 ===
Started at: Mi 29. Okt 18:22:59 CET 2025

[2025-10-29 18:23:00] START: Running container for 9316552
[2025-10-29 18:23:00] SUCCESS: Container 25f023d3b0c0755824db98e8ae244c9601e628b08e99ff75a42eeb8493b7d5b5 started for 9316552
=== Container logs for 9316552 ===
  File "/snippet.py", line 320
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 9316552 ===
[2025-10-29 18:23:02] INFO: Container 25f023d3b0c0755824db98e8ae244c9601e628b08e99ff75a42eeb8493b7d5b5 has stopped
